Add support for finding content in search paths